--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,28 +1,21 @@
 {
-  "header": {
-    "Home": "Home",
-    "Components": "Components",
-    "Pages": "Pages",
-    "Documentation": "Documentation",
-    "Login": "Login",
-    "JoinUs": "Join Us",
-    "Services": "Services",
-    "Blog": "Blog",
-    "CoursesList": "Courses List",
-    "Contacts": "Contacts",
-    "AboutUs": "AboutUs"
-  },
-  "footer": {
-    "SEOAnalysis": {
-      "SEO1": "Get Free",
-      "SEO2": "SEO Analysis",
-      "email": "Hello@agency.com",
-      "address": "508 Bridle Avenue Newnan, GA 30263",
-      "name-placeholder": "Name",
-      "email-placeholder": "Email",
-      "phone-placeholder": "Phone",
-      "website-placeholder": "website URL",
-      "SendRequest" : "Send Request"
-    }
-  }
+	"header": {
+		"Home": "Home",
+		"Components": "Components",
+		"Pages": "Pages",
+		"Documentation": "Documentation",
+		"Login": "Login",
+		"JoinUs": "Join Us",
+		"Services": "Services",
+		"Blog": "Blog",
+		"CoursesList": "Courses List",
+		"Contacts": "Contacts",
+		"AboutUs": "AboutUs"
+	},
+	"footer": {
+		"text": "The starting point for your next project based on easy-to-customize Material-UI © helps you build apps faster and better.",
+		"email": "Email address",
+		"HelpCenter": "HelpCenter",
+		"Terms": "Terms of Service"
+	}
 }
