--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,5 +24,22 @@
       "website-placeholder": "URL-адрес веб-сайта",
       "SendRequest": "Отправить запрос"
     }
+  },
+  "news": {
+    "register": "Регистр",
+    "h3": "Зарегистрируйтесь теперь забудьте 20% скидки на каждую курсыа каждую курсы",
+    "p": "Для самой улыбки, макияжа жизни, производства футбола, достава, озера.Но Большой Чили, разминка"
+  },
+  "feature": {
+    "title": "Показанная категория",
+    "desc": "Поскольку визуализация проволочной рамы относительно просты и быстро для расчета, они часто используются в случаях",
+    "button": "Изучите больше",
+    "title1": "Phyton",
+    "title2": "Управление",
+    "title3": "Веб-разработка",
+    "title5": "Машинное обучение",
+    "title6": "Информационная безопасность",
+    "title7": "Маркетинг",
+    "student": "студентов"
   }
 }
