resolve conflict: in translate

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,4 @@
-
+{
 	"header": {
 		"Home": "Home",
 		"Components": "Components",
@@ -16,18 +16,23 @@
 		"text": "The starting point for your next project based on easy-to-customize Material-UI © helps you build apps faster and better.",
 		"email": "Email address",
 		"HelpCenter": "HelpCenter",
-		"Terms": "Terms of Service",
-        "SEOAnalysis": {
-      "SEO1": "Get Free",
-      "SEO2": "SEO Analysis",
-      "email": "Hello@agency.com",
-      "address": "508 Bridle Avenue Newnan, GA 30263",
-      "name-placeholder": "Name",
-      "email-placeholder": "Email",
-      "phone-placeholder": "Phone",
-      "website-placeholder": "website URL",
-      "SendRequest" : "Send Request"
-    }
+		"Terms": "Terms of Service"
+	},
+	"news": {
+		"register": "Register",
+		"h3": "Register Now Forget 20% Discount Every Courses",
+		"p": "Nam ipsum risus, rutrum vitae, vestibulum eu, molestievel, lacus. Sed magna purus, fermentum eu"
+	},
+	"feature": {
+		"title": "Featured Category",
+		"desc": "Since wire-frame renderings are relatively simple and fast to calculate, they are often used in cases",
+		"button": "Explore more",
+		"title2": "Management",
+		"title3": "Web Development",
+		"title5": "Machine Learning",
+		"title6": "Cyber Security",
+		"title7": "Marketing",
+		"student": "students"
 	},
 	"Landing": {
 		"Main": {
@@ -46,21 +51,5 @@
 			"h2": "We Work With",
 			"p": "Quisque aliquet, libero consequat elementum convallis."
 		}
-	},
-  "news": {
-    "register": "Register",
-    "h3": "Register Now Forget 20% Discount Every Courses",
-    "p": "Nam ipsum risus, rutrum vitae, vestibulum eu, molestievel, lacus. Sed magna purus, fermentum eu"
-  },
-  "feature": {
-    "title": "Featured Category",
-    "desc": "Since wire-frame renderings are relatively simple and fast to calculate, they are often used in cases",
-    "button": "Explore more",
-    "title2": "Management",
-    "title3": "Web Development",
-    "title5": "Machine Learning",
-    "title6": "Cyber Security",
-    "title7": "Marketing",
-    "student": "students"
-  }
+	}
 }
