--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,4 @@
-
+{
 	"header": {
 		"Home": "главная",
 		"Components": "Компоненты",
@@ -16,19 +16,24 @@
 		"text": "Отправная точка для вашего следующего проекта на основе легко настраиваемого пользовательского интерфейса Material-UI © поможет вам создавать приложения быстрее и лучше.",
 		"email": "Электронная почта",
 		"HelpCenter": "Центр поддержки",
-		"Terms": "Условия использования",
-        "SEOAnalysis": {
-      "SEO1": "Получить бесплатно",
-      "SEO2": "SEO-анализ",
-      "email": "Hello@agency.com",
-      "address": "508 Bridle Avenue Newnan, GA 30263",
-      "name-placeholder": "Имя",
-      "email-placeholder": "Электронная почта",
-      "phone-placeholder": "Телефон",
-      "website-placeholder": "URL-адрес веб-сайта",
-      "SendRequest": "Отправить запрос"
-    }
-
+		"Terms": "Условия использования"
+	},
+	"news": {
+		"register": "Регистр",
+		"h3": "Зарегистрируйтесь теперь забудьте 20% скидки на каждую курсыа каждую курсы",
+		"p": "Для самой улыбки, макияжа жизни, производства футбола, достава, озера.Но Большой Чили, разминка"
+	},
+	"feature": {
+		"title": "Показанная категория",
+		"desc": "Поскольку визуализация проволочной рамы относительно просты и быстро для расчета, они часто используются в случаях",
+		"button": "Изучите больше",
+		"title1": "Phyton",
+		"title2": "Управление",
+		"title3": "Веб-разработка",
+		"title5": "Машинное обучение",
+		"title6": "Информационная безопасность",
+		"title7": "Маркетинг",
+		"student": "студентов"
 	},
 	"Landing": {
 		"Main": {
@@ -46,23 +51,5 @@
 			"h2": "Мы работаем с",
 			"p": "Quisque aliquet, libero consequat elementum convallis."
 		}
-	},
-  "news": {
-    "register": "Регистр",
-    "h3": "Зарегистрируйтесь теперь забудьте 20% скидки на каждую курсыа каждую курсы",
-    "p": "Для самой улыбки, макияжа жизни, производства футбола, достава, озера.Но Большой Чили, разминка"
-  },
-  "feature": {
-    "title": "Показанная категория",
-    "desc": "Поскольку визуализация проволочной рамы относительно просты и быстро для расчета, они часто используются в случаях",
-    "button": "Изучите больше",
-    "title1": "Phyton",
-    "title2": "Управление",
-    "title3": "Веб-разработка",
-    "title5": "Машинное обучение",
-    "title6": "Информационная безопасность",
-    "title7": "Маркетинг",
-    "student": "студентов"
-  }
-
+	}
 }
