feat: Add translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -50,6 +50,11 @@
 		"OurWork": {
 			"h2": "We Work With",
 			"p": "Quisque aliquet, libero consequat elementum convallis."
+		},
+		"DownloadApp" : {
+			"h2" : "Download App",
+			"p" : "Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.",
+			"h6" : "Scan QR code to install on your device"
 		}
 	}
 }
