--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -50,6 +50,11 @@
 		"OurWork": {
 			"h2": "Мы работаем с",
 			"p": "Quisque aliquet, libero consequat elementum convallis."
+		},
+		"DownloadApp" : {
+			"h2" : "Скачать приложение",
+			"p" : "Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.",
+			"h6" : "Отсканируйте QR-код для установки на свое устройство"
 		}
 	}
 }
