--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -41,5 +41,16 @@
     "title6": "Информационная безопасность",
     "title7": "Маркетинг",
     "student": "студентов"
+  },
+  "team": {
+    "name1": "Элеонора Пена",
+    "name2": "Кэтрин Мерфи",
+    "name3": "Дайан Рассел",
+    "name4": "Эстер Ховард",
+    "job1": "Дизайнер пользовательского интерфейса",
+    "job2": "Менеджер по персоналу",
+    "job3": "Лидер",
+    "job4": "Руководитель проекта"
   }
+
 }
