--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,17 +13,10 @@
     "AboutUs": "О нас"
   },
   "footer": {
-    "SEOAnalysis": {
-      "SEO1": "Получить бесплатно",
-      "SEO2": "SEO-анализ",
-      "email": "Hello@agency.com",
-      "address": "508 Bridle Avenue Newnan, GA 30263",
-      "name-placeholder": "Имя",
-      "email-placeholder": "Электронная почта",
-      "phone-placeholder": "Телефон",
-      "website-placeholder": "URL-адрес веб-сайта",
-      "SendRequest": "Отправить запрос"
-    }
+    "text": "Отправная точка для вашего следующего проекта на основе легко настраиваемого пользовательского интерфейса Material-UI © поможет вам создавать приложения быстрее и лучше.",
+    "email": "Электронная почта",
+    "HelpCenter": "Центр поддержки",
+    "Terms": "Условия использования"
   },
   "news": {
     "register": "Регистр",
@@ -74,4 +67,5 @@
 			"h6" : "Отсканируйте QR-код для установки на свое устройство"
 		}
 	}
+} 
 
