--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -65,6 +65,10 @@
 			"h2" : "Download App",
 			"p" : "Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.",
 			"h6" : "Scan QR code to install on your device"
-		}
+		},
+    "latestPosts" : {
+      "h2" : "Latest Posts",
+      "button" : "View All"
+    }
 	}
 }
