--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,50 +1,50 @@
 {
-  "header": {
-    "Home": "главная",
-    "Components": "Компоненты",
-    "Pages": "Страницы",
-    "Documentation": "Документация",
-    "Login": "логин",
-    "JoinUs": "зарегистрироваться",
-    "Services": "Услуги",
-    "Blog": "Блог",
-    "CoursesList": "Список курсов",
-    "Contacts": "Контакты",
-    "AboutUs": "О нас"
-  },
-  "footer": {
-    "text": "Отправная точка для вашего следующего проекта на основе легко настраиваемого пользовательского интерфейса Material-UI © поможет вам создавать приложения быстрее и лучше.",
-    "email": "Электронная почта",
-    "HelpCenter": "Центр поддержки",
-    "Terms": "Условия использования"
-  },
-  "news": {
-    "register": "Регистр",
-    "h3": "Зарегистрируйтесь теперь забудьте 20% скидки на каждую курсыа каждую курсы",
-    "p": "Для самой улыбки, макияжа жизни, производства футбола, достава, озера.Но Большой Чили, разминка"
-  },
-  "feature": {
-    "title": "Показанная категория",
-    "desc": "Поскольку визуализация проволочной рамы относительно просты и быстро для расчета, они часто используются в случаях",
-    "button": "Изучите больше",
-    "title1": "Phyton",
-    "title2": "Управление",
-    "title3": "Веб-разработка",
-    "title5": "Машинное обучение",
-    "title6": "Информационная безопасность",
-    "title7": "Маркетинг",
-    "student": "студентов"
-  },
-  "team": {
-    "name1": "Элеонора Пена",
-    "name2": "Кэтрин Мерфи",
-    "name3": "Дайан Рассел",
-    "name4": "Эстер Ховард",
-    "job1": "Дизайнер пользовательского интерфейса",
-    "job2": "Менеджер по персоналу",
-    "job3": "Лидер",
-    "job4": "Руководитель проекта"
-  },
+	"header": {
+		"Home": "главная",
+		"Components": "Компоненты",
+		"Pages": "Страницы",
+		"Documentation": "Документация",
+		"Login": "логин",
+		"JoinUs": "зарегистрироваться",
+		"Services": "Услуги",
+		"Blog": "Блог",
+		"CoursesList": "Список курсов",
+		"Contacts": "Контакты",
+		"AboutUs": "О нас"
+	},
+	"footer": {
+		"text": "Отправная точка для вашего следующего проекта на основе легко настраиваемого пользовательского интерфейса Material-UI © поможет вам создавать приложения быстрее и лучше.",
+		"email": "Электронная почта",
+		"HelpCenter": "Центр поддержки",
+		"Terms": "Условия использования"
+	},
+	"news": {
+		"register": "Регистр",
+		"h3": "Зарегистрируйтесь теперь забудьте 20% скидки на каждую курсыа каждую курсы",
+		"p": "Для самой улыбки, макияжа жизни, производства футбола, достава, озера.Но Большой Чили, разминка"
+	},
+	"feature": {
+		"title": "Показанная категория",
+		"desc": "Поскольку визуализация проволочной рамы относительно просты и быстро для расчета, они часто используются в случаях",
+		"button": "Изучите больше",
+		"title1": "Phyton",
+		"title2": "Управление",
+		"title3": "Веб-разработка",
+		"title5": "Машинное обучение",
+		"title6": "Информационная безопасность",
+		"title7": "Маркетинг",
+		"student": "студентов"
+	},
+	"team": {
+		"name1": "Элеонора Пена",
+		"name2": "Кэтрин Мерфи",
+		"name3": "Дайан Рассел",
+		"name4": "Эстер Ховард",
+		"job1": "Дизайнер пользовательского интерфейса",
+		"job2": "Менеджер по персоналу",
+		"job3": "Лидер",
+		"job4": "Руководитель проекта"
+	},
 	"Landing": {
 		"Main": {
 			"free": "Бесплатные",
@@ -61,15 +61,18 @@
 			"h2": "Мы работаем с",
 			"p": "Quisque aliquet, libero consequat elementum convallis."
 		},
-		"DownloadApp" : {
-			"h2" : "Скачать приложение",
-			"p" : "Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.",
-			"h6" : "Отсканируйте QR-код для установки на свое устройство"
+		"DownloadApp": {
+			"h2": "Скачать приложение",
+			"p": "Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.",
+			"h6": "Отсканируйте QR-код для установки на свое устройство"
 		},
-    "latestPosts" : {
-      "h2" : "Последние посты",
-      "button" : "Просмотреть все"
-    }
+		"latestPosts": {
+			"h2": "Последние посты",
+			"button": "Просмотреть все"
+		},
+		"FeaturedCourses": {
+			"h2": "Избранные курсы",
+			"p": "Nullam accumsan lorem in dui. Praesent ac massa at ligula laoreet iaculis."
+		}
 	}
-} 
-
+}
