feat: finish BlogPage + translation requests + i18next translations + filters + search + adabtive

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -74,6 +74,13 @@
 			"h2": "Featured Courses",
 			"p": "Nullam accumsan lorem in dui. Praesent ac massa at ligula laoreet iaculis."
 		}
-
-	}
+	},
+  "BlogPage" :{
+    "Categories" : "Categories",
+    "Posts" : "Recent Posts",
+    "Tags" : "Popular Tags",
+    "Ad" : "Advertisement",
+    "Button" : "Go Now",
+    "h1_loading" : "Empty..."
+  }
 }
