--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -82,5 +82,20 @@
     "Ad" : "Advertisement",
     "Button" : "Go Now",
     "h1_loading" : "Empty..."
+  },
+  "AboutUsPage" :{
+    "Main" : {
+      "h1" : "Online Courses",
+      "button" : "Browse Courses"
+    },
+    "Static":{
+      "h3": "Effective Forms Advertising Internet Web Site",
+      "p": "Over 92% of computers are infected with Adware and spyware. Such software is rarely accompanied by uninstall utility and even when it is it almost always leaves broken Windows",
+      "cards": {
+        "tag_first": "Learners",
+        "tag_sec": "Courses",
+        "tag_thd": "Graduates"
+      }
+    }
   }
 }
