--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -82,5 +82,20 @@
 		"Ad": "Реклама",
 		"Button": "Перейти сейчас",
 		"h1_loading": "Пусто..."
-	}	
+	},
+  "AboutUsPage" :{
+    "Main" : {
+      "h1" : "Онлайн курсы",
+      "button" : "Просмотреть курсы"
+    },
+    "Static":{
+      "h3": "Эффективная реклама интернет-сайта формы",
+      "p": "Более 92% компьютеров заражены рекламными программами и программами-шпионами. Такое программное обеспечение редко сопровождается утилитой для удаления, и даже если она есть, она почти всегда оставляет поломанную операционную систему Windows",
+      "cards": {
+        "tag_first": "Учащиеся",
+        "tag_sec": "Курсы",
+        "tag_thd": "Выпускники"
+      }
+    }
+  }
 }
