feat: Values-AboutUsPage

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -96,6 +96,16 @@
         "tag_sec": "Курсы",
         "tag_thd": "Выпускники"
       }
-    }
+    },
+		"Values": {
+			"h2": "Основные ценности",
+			"cards": {
+				"h5_1": "Структурированный подход",
+				"h5_2": "Профессиональная обратная связь",
+				"h5_3": "Эффективность",
+				"h5_4": "Гибкий график"
+			}
+		}
+
   }
 }
