feat: Our teachers

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -105,7 +105,9 @@
 				"h5_3": "Эффективность",
 				"h5_4": "Гибкий график"
 			}
+		},
+		"team": {
+			"h2": "Наши преподаватели"
 		}
-
   }
 }
