feat: translation + fix: crumbs style

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -109,5 +109,11 @@
 		"team": {
 			"h2": "Our Teachers"
 		}
+	},
+	"Blog--details": {
+		"Home": "Home",
+		"Blog": "blog",
+		"prev": "PREVIOUS POST",
+		"next": "NEXT POST"
 	}
 }
