--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -109,5 +109,11 @@
 		"team": {
 			"h2": "Наши преподаватели"
 		}
-  }
+  },
+	"Blog--details": {
+		"Home": "главная",
+		"Blog": "Блог",
+		"prev": "ПРЕДЫДУЩАЯ ПУБЛИКАЦИЯ",
+		"next": "СЛЕДУЮЩАЯ ПУБЛИКАЦИЯ"
+	}
 }
