--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -115,5 +115,22 @@
 		"Blog": "Блог",
 		"prev": "ПРЕДЫДУЩАЯ ПУБЛИКАЦИЯ",
 		"next": "СЛЕДУЮЩАЯ ПУБЛИКАЦИЯ"
+	},
+	"ContactPage": {
+		"h2": "Свяжитесь с нами",
+		"email": "Электронная почта",
+		"Phone": "Телефон",
+		"Address": "Адрес",
+		"Address--info": "3891 Ranchview Dr. Ричардсон, Калифорния 62639",
+		"Follow": "ПОДПИСЫВАЙТЕСЬ НА НАС",
+		"form": {
+		"h": "Напишите нам",
+		"p": "Мы обычно отвечаем в течение 2 рабочих дней",
+		"Name": "Имя",
+		"Email": "Электронная почта",
+		"Subject": "Тема",
+		"Message": "Сообщение",
+		"Send Message": "Отправить сообщение"
+		}
 	}
 }
